modules/gdscript/tests/scripts/analyzer/errors/access_level_protected_var_outside.gd
@private

class Foo:
    protected var a = 1
    func foo():
        pass

func test():
    print(Foo.new().a)
